--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,12 @@ body {
 
 header {
     display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 10000;
+    background: linear-gradient(to right, #360745, #40005C, #360452);
     justify-content: space-between;
     align-items: center;
     padding: 30px 100px 10px 100px;
@@ -48,12 +54,22 @@ header nav ul li {
 
 header nav ul li a {
     text-decoration: none;
+    padding: 7px;
     color: #fff;
+    border-radius: 30px;
+    text-transform: uppercase;
+}
+
+header nav ul li a:hover {
+    background-color: #fff;
+    color: #360452;
 }
 
 main section {
-    margin-bottom: 100px;
+    position: relative;
+    margin-top: 70px;
     padding: 0 100px;
+    height: 100vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -73,7 +89,12 @@ main section#home .textBox h1 {
 main section#home .textBox h1 span {
     color: #fff;
     text-transform: none;
-    font-size: 2.2em;
+    font-variant: small-caps;
+    font-size: 3em;
+    transition: 0.5s;
+}
+
+main section#home .textBox h1 span:hover {
 }
 
 main section .textBox p {
@@ -89,12 +110,19 @@ main section .textBox p strong {
 }
 
 main section .imgBox {
+    transform: scale(0.9);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: 0.2s;
     transition: transform;
+    border-radius: 60%;
+    background-image: linear-gradient(#D6004D, #ED1850, transparent, transparent);
+    transition: 0.2s;
+}
+
+main section .imgBox:hover {
+    transform: scale(1);
 }
 
 main section#home .imgBox p {
@@ -104,13 +132,14 @@ main section#home .imgBox p {
 
 }
 
-main section#home .imgBox p:hover {
-    color: #ED1850;
-}
-
 main section#home .imgBox img {
     width: 300px;
     border-radius: 200px;
+}
+
+div.divider-1 {
+    height: 1px;
+    background-image: linear-gradient(90deg, #F70C20, #D6004D, transparent);
 }
 
 main section#about {
@@ -118,8 +147,16 @@ main section#about {
     margin-bottom: 0;
 }
 
+main section#about .imgBox {
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+}
+
 main section#about .imgBox img {
     width: 150px;
+    position: relative;
+    left: 16px
 }
 
 main section#about .textBox p {
