--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,8 @@ main section .imgBox {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 60%;    
+    border-radius: 60%;
+    transition: 0.2s;    
 }
 
 main section .imgBox img {
