--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,8 @@ header nav ul li a {
     text-transform: uppercase;
 }
 
-header nav ul li a:hover {
+header nav ul li a:hover,
+header nav ul li a.active {
     background-color: var(--cor-padrao-de-letra);
     color: var(--cor-link-hover);
 }
