--- a/styles/style.css
+++ b/styles/style.css
@@ -461,6 +461,7 @@ main section#contact .others i {
 
     main section#home .textBox {
         padding: 50px;
+        width: 100vw;
     }
 
     main section#home h1 span,
